# ray-proxy

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
ray_proxy/: __init__.py  ast.py  async_interpreter.py  cluster_resource.py  cluster_task_scheduler.py  injected_resource.py  interface.py  prepared.py  py_environment.py  ray_queue.py  releasable.py  remote_env.py  remote_prog_bar.py  remote_proxy.py  resource_design.py  resource_scheduler.py  resource_scheduler_client.py  serialization_check.py  type_aliases.py  util.py  var_interface.py
tests/: test_cluster_resource.py  test_remote_interpreter.py  test_resource_scheduler.py
