[tool.poetry]
name = "ray-proxy"
version = "0.1.3"
description = "A library which enables the creation of proxy variables for remote python interpreter in ray cluster."
authors = ["proboscis <nameissoap@gmail.com>"]
packages = [{ include = "ray_proxy" }]
license = "MIT"
[tool.poetry.dependencies]
python = "^3.7"
ray = "^2.0.0"
bidict = "*"
returns = "*"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
