[tool.poetry]
name = "ray-proxy"
version = "0.1.6"
description = "A library which enables the creation of proxy variables for remote python interpreter in ray cluster."
authors = ["proboscis <nameissoap@gmail.com>"]
packages = [{ include = "ray_proxy" }]
license = "MIT"
[tool.poetry.dependencies]
python = "^3.7"
ray = "^2.0.0"
loguru = "^0.6.0"
bidict = "^0.22.0"
returns = "^0.19.0"


[tool.poetry.dev-dependencies]
pytest = "*"
[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
